<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg"
        tools:context=".ui.activities.MainActivity">

    <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/tv_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/r_0_00"
                    android:textSize="48sp"
                    android:maxLines="1"
                    android:fontFamily="@font/din_condensed_bold"
                    android:layout_marginTop="32dp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/tv_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_a_pagar"
                    android:textAllCaps="true"
                    android:fontFamily="@font/din_condensed_bold"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_value"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/keyboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_sub"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent">

                <TextView
                        android:id="@+id/kb_number1"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:fontFamily="@font/din_condensed_bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/kb_number2"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textColor="@color/colorWhite"
                        android:textSize="36sp"
                        android:gravity="center"
                        android:background="@drawable/button_circle"

                        android:text="@string/one"
                />

                <TextView
                        android:id="@+id/kb_number2"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:fontFamily="@font/din_condensed_bold"
                        app:layout_constraintStart_toEndOf="@id/kb_number1"
                        app:layout_constraintEnd_toStartOf="@id/kb_number3"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textColor="@color/colorWhite"
                        android:textSize="36sp"
                        android:gravity="center"
                        android:background="@drawable/button_circle"

                        android:text="@string/two"
                />

                <TextView
                        android:id="@+id/kb_number3"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:fontFamily="@font/din_condensed_bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/kb_number2"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textColor="@color/colorWhite"
                        android:textSize="36sp"
                        android:gravity="center"
                        android:background="@drawable/button_circle"

                        android:text="@string/three"
                />

                <TextView
                        android:id="@+id/kb_number4"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:fontFamily="@font/din_condensed_bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/kb_number5"
                        app:layout_constraintTop_toBottomOf="@id/kb_number1"
                        android:textColor="@color/colorWhite"
                        android:textSize="36sp"
                        android:gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_circle"
                        android:text="@string/four"
                />

                <TextView
                        android:id="@+id/kb_number5"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:fontFamily="@font/din_condensed_bold"
                        app:layout_constraintStart_toEndOf="@id/kb_number4"
                        app:layout_constraintEnd_toStartOf="@id/kb_number6"
                        app:layout_constraintTop_toBottomOf="@id/kb_number2"
                        android:textColor="@color/colorWhite"
                        android:textSize="36sp"
                        android:gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_circle"

                        android:text="@string/five"
                />

                <TextView
                        android:id="@+id/kb_number6"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:fontFamily="@font/din_condensed_bold"
                        app:layout_constraintStart_toEndOf="@id/kb_number5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/kb_number3"
                        android:textColor="@color/colorWhite"
                        android:textSize="36sp"
                        android:gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_circle"

                        android:text="@string/six"
                />

                <TextView
                        android:id="@+id/kb_number7"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:fontFamily="@font/din_condensed_bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/kb_number5"
                        app:layout_constraintTop_toBottomOf="@id/kb_number4"
                        android:textColor="@color/colorWhite"
                        android:textSize="36sp"
                        android:gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_circle"

                        android:text="@string/seven"
                />

                <TextView
                        android:id="@+id/kb_number8"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:fontFamily="@font/din_condensed_bold"
                        app:layout_constraintStart_toEndOf="@id/kb_number4"
                        app:layout_constraintEnd_toStartOf="@id/kb_number6"
                        app:layout_constraintTop_toBottomOf="@id/kb_number5"
                        android:textColor="@color/colorWhite"
                        android:textSize="36sp"
                        android:gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_circle"

                        android:text="@string/eight"
                />

                <TextView
                        android:id="@+id/kb_number9"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:fontFamily="@font/din_condensed_bold"
                        app:layout_constraintStart_toEndOf="@id/kb_number5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/kb_number6"
                        android:textColor="@color/colorWhite"
                        android:textSize="36sp"
                        android:gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_circle"

                        android:text="@string/nine"
                />

                <TextView
                        android:id="@+id/kb_number0"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:fontFamily="@font/din_condensed_bold"
                        app:layout_constraintStart_toEndOf="@id/kb_number4"
                        app:layout_constraintEnd_toStartOf="@id/kb_number6"
                        app:layout_constraintTop_toBottomOf="@id/kb_number8"
                        android:textColor="@color/colorWhite"
                        android:textSize="36sp"
                        android:gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_circle"
                        android:text="@string/zero"
                />

                <TextView
                        android:id="@+id/kb_delete"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:fontFamily="@font/din_condensed_bold"
                        app:layout_constraintStart_toEndOf="@id/kb_number5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/kb_number9"
                        android:textColor="@color/colorWhite"
                        android:textSize="36sp"
                        android:gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_circle"
                        android:text="@string/erase_button"
                />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/keyboard"
                    android:orientation="horizontal"
                    android:background="@drawable/pager_bg"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>