<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/success_bg"
        tools:context=".ui.activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    >

        <ImageView
                android:id="@+id/iv_back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/ic_arrow_back"
                android:tint="@color/colorWhite"
        />

        <TextView
                android:id="@+id/tv_sucesso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="20sp"
                android:fontFamily="@font/din_condensed_bold"
                android:textColor="@color/colorWhite"
                android:textAllCaps="true"
                android:text="Pagamento Realizado com Sucesso"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bilhete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:background="@drawable/recibo_background"
    >

        <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="200dp"
                android:layout_height="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="64dp"
                app:srcCompat="@drawable/ic_logo"
        />

        <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/iv_logo"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:text="@string/eyemobile_tecnologia_ltda"
        />

        <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:gravity="center"
                android:lineSpacingExtra="8dp"
                android:text="@string/rua_airton_roberto_de_oliveira_n_mero_64"
        />

        <TextView
                android:id="@+id/tv_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_address"
                android:layout_marginTop="32dp"
                android:textSize="32sp"
                android:textColor="@color/colorBlack"
                android:text="@string/r_30_00"
        />

        <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_value"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="@string/dinheiro"
        />

        <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_type"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="96dp"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="@string/_15_02_2020_14_00_00"
        />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button android:id="@+id/b_confirm"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bilhete"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_bg"
            android:textColor="@color/colorWhite"
            android:text="@string/confirmar"
            android:textSize="20sp"
            android:paddingHorizontal="32dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>